# xlsxgrep

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
xlsxgrep/: __init__.py  xlsxgrep.py
