[metadata]
name = xlsxgrep
version = 0.0.27
author = Ivan Cvitic
author_email = cviticivan@gmail.com
license = MIT
description = CLI tool to search text in XLSX, XLS and ODS files. It works similarly to Unix\GNU Linux grep
url = https://github.com/zazuum/xlsxgrep
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities

[options]
packages = xlsxgrep
install_requires =
    pyexcel
    pyexcel-xls
    pyexcel-xlsx
    pyexcel-ods3
    pyexcel-ods
include_package_data = True

[options.entry_points]
console_scripts = xlsxgrep=xlsxgrep.xlsxgrep:main
